--- a/PointOfSales/nbproject/project.properties
+++ b/PointOfSales/nbproject/project.properties
@@ -34,11 +34,13 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/PointOfSales
 excludes=
 file.reference.mysql-connector-j-8.2.0.jar=C:\\Users\\ACER\\Downloads\\mysql-connector-j-8.2.0\\mysql-connector-j-8.2.0\\mysql-connector-j-8.2.0.jar
+file.reference.mysql-connector-j-8.2.0.jar-1=C:\\Users\\ACER\\Downloads\\mysql-connector-j-8.2.0\\mysql-connector-j-8.2.0\\mysql-connector-j-8.2.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.mysql-connector-j-8.2.0.jar}
+    ${file.reference.mysql-connector-j-8.2.0.jar}:\
+    ${file.reference.mysql-connector-j-8.2.0.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
